fix: move article dark mode button even lower for better vertical alignment

--- a/style.css
+++ b/style.css
@@ -572,7 +572,7 @@ footer {
 
 .article-header-actions {
   position: absolute;
-  top: 1.7em;
+  top: 2.2em;
   right: clamp(0.7em, 4vw, 2em);
   display: flex;
   align-items: center;
